<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.tabs.addFavor.FavorDetailView"
    android:background="@color/material_green_50"
    android:clickable="true"
    android:focusable="true">
    <!-- add above: android:background="@color/material_green_50"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/favor_greeting_str"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="220dp"
            android:ems="10"

            android:text="@string/favor_greeting_str"
            android:textAlignment="center"
            android:textSize="20sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:autofillHints=""
            android:hint="@string/favor_title_hint"
            android:inputType="textShortMessage"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favor_greeting_str" />

        <ImageView
            android:id="@+id/imageView"

            android:layout_width="240dp"
            android:layout_height="160dp"

            android:layout_marginTop="22dp"
            android:contentDescription="@string/favor_img_content_desc"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <EditText
            android:id="@+id/location"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="204dp"

            android:autofillHints=""
            android:hint="@string/favor_location_hint"
            android:inputType="textShortMessage"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/datetime"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:autofillHints=""
            android:hint="@string/favor_datetime_hint"

            android:inputType="datetime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <EditText
            android:id="@+id/details"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top|start"
            android:hint="@string/favor_details_hint"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="8"

            android:minLines="8"
            android:scrollbars="vertical"

            app:layout_constraintTop_toBottomOf="@id/datetime" />

        <Button
            android:id="@+id/add_button"

            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="604dp"
            android:text="@string/favor_confirm_button"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textColor="#FF0000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/add_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>