...
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/nav_favorList"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_favors" />

</menu>

